Sami/Resources/themes/default/css/sami.less
@import "elements.less";
@import "vars.less";
@import "fonts.less";
@import "labels.less";
@import "navbar.less";
@import "roadiz-header.less";
@import "icons.less";

html,
body,
#content {

    font-family: 'RoadizSans', Helvetica, Arial, sans-serif;
    height: 100%;
    font-size: 13px;
    // letter-spacing: 0.02em;
}

a {
    color:@linked-color;

    &:hover,
    &:focus {
        color:@linked-color;
    }
}

h4, .h4 {
    font-size: 14px;
}

.table > tbody > tr:first-child > td {
    border-top: none;
}

/* Namespace breadcrumbs */

.namespace-breadcrumbs .breadcrumb {
    margin: 0 0 12px;
    border-radius: 0 0 4px 4px;
    padding-left: 35px;

    height: 50px;
    .box-sizing();
    background: white;
}

.namespace-breadcrumbs .breadcrumb > li + li:before {
    content: "\\"
}

/* Site columns */

#right-column {
    //margin-left: 25%;
    margin-left:300px;
    padding-top: @header-height + @rz-header-height;
}

#page-content {
    padding: 0 30px;
}

#left-column {
    //width: 25%;
    width: 300px;
    position: fixed;
    //border-right: 1px solid #ccc;
    line-height: 18px;
    font-size: 13px;
    top:@rz-header-height;
    bottom: @header-height;
}

@media (max-width: 991px) {
    #left-column {
        display: none;
    }
    #right-column {
        width: 100%;
        margin-left: 0;
        padding-top: @header-height;
    }
    #site-nav.navbar-default {
        top:0px;
    }
}

/* API Tree */

#api-tree {
    background: #f2f2f2;
    background-size: 100% 56px;
    overflow: auto;
    height: 100%;
    background-attachment: local;
}

#api-tree ul {
    list-style-type: none;
    margin: 0;
    padding: 0;
}

#api-tree ul li {
    padding: 0;
    margin: 0;
}

/* Prevents the menu from jittering on lad */
#api-tree .glyphicon-play {
    width: 26px;
}

#api-tree ul li .hd {
    padding: 5px;
}

#api-tree li .hd:nth-child(even) {
    background-color: @alt-color;
}

#api-tree ul li.opened > .hd span {
    -webkit-transform : rotate(90deg);
    -moz-transform    : rotate(90deg);
    -o-transform      : rotate(90deg);
    -ms-transform     : rotate(90deg);
    transform         : rotate(90deg);
}

#api-tree .bd {
    display: none;
}

#api-tree li.opened > .bd {
    display: block;
}

#api-tree li .hd:hover {
    background-color: #eee;
}

#api-tree li.active > .hd {
    background-color: @selected-color;
}

#api-tree li.active > .hd a {
    color: #fff;
}

#api-tree a {
    color: #222;
}

#api-tree div.leaf a {
    margin-left: 20px;
}

#api-tree .hd span {
    padding: 2px 8px;
    font-size: 10px;
    line-height: 85%;
}

/* Control panel, search form, version drop-down */

#control-panel {
    background: @main-contrast-color;
    padding: 12px;
    .box-sizing();
    height: 67px;
}

#control-panel form {
    margin: 4px 4px 5px 4px;
}

#search-form {
    position: relative;
}

#search-form input {
    width: 100%;
    padding-left: 28px;

    .rounded(34px);
    border: 0 none;
}

#search-form span.glyphicon-search {
    position: absolute;
    left: 9px;
    top: 9px;
    font-size: 14px;
    z-index: 2;
}

/* Typeahead */

.twitter-typeahead {
    width: 100%;
    z-index: 1;
}

.tt-dropdown-menu {
    overflow: auto;
    max-height: 260px;
    margin-top: 9px;
    background-color: #fff;
    border: 1px solid #ccc;
    border-radius: 8px;
    box-shadow: 0 5px 10px rgba(0,0,0,.2);
    padding: 8px;
}

.tt-dropdown-menu p {
    margin: 0;
    padding: 0;
}

.tt-suggestion {
    padding: 8px;
    border-bottom: 1px solid #ccc;
    font-size: 1.1em;
}

.tt-cursor {
    background-color: @selected-color;
    color: #fff;
}

/** General typography **/

.navbar {
    border-bottom: 0;
}

.page-header {
    margin: 0 0 20px;
}

abbr[title], abbr[data-original-title], abbr {
    border-bottom: none;
    cursor: pointer;
}

a abbr {
    cursor: pointer;
}

/** General Sami styling **/

.underlined > .row {
    padding: 8px 0;
    border-bottom: 1px solid #ddd;
}

#footer {
    text-align: right;
    margin: 30px;
    font-size: 11px;
}

.description {
    margin: 10px 0;
    padding: 10px;
    background-color: #efefef;
}

.description p {
    padding: 0;
    margin: 8px 0;
}

.method-description {
    margin: 0 0 24px 0;
}

.details {
    padding-left: 30px;
}

/*
 * Methods summary
 */
#methods-summary {

    .row {
        border-bottom: 1px dotted #ddd;
        padding: 5px 0;

        .method-description {
            color: #808080;
            font-size: 13px;
            margin: 3px 0px;
        }
    }
}


.method-hint {
    text-align: right;
}

#method-details .method-item .location,
.method-inheritance small {
    border: 1px solid #EAEAEA;
    padding: 4px 7px;
    margin-top: 4px;
    background: #F5F5F5;
    display: inline-block;
    font-size: 11px;
}

#method-details .method-item {
    margin-bottom: 0px;
    border-bottom: 1px dotted #DDD;
}

.method-item h3,
.method-item h3 code {
    background-color: transparent;
    font-size: 14px;
}

.method-item h3 {
    padding: 4px;
    margin-bottom: 20px;
    font-size: 20px;
}

.method-item {

    .tags {
        table {
            width: auto;

            tr > td {
                padding: 5px 10px;
                border-color: #e6e6e6;
            }
        }
    }
}

.location {
    float: right;
}

.namespace-list a {
    padding: 3px 8px;
    margin: 0 5px 5px 0;
    border: 1px solid #ddd;
    background-color: #f9f9f9;
    display: inline-block;
    border-radius: 4px;
}

.no-description {
    color: #ccc;
    font-size: 90%;
}

/* Namespaces page */

.namespaces {
    clear: both;
}

.namespaces .namespace-container {
    float: left;
    margin: 0 14px 14px 0;
    min-width: 30%;
}

.namespaces h2 {
    margin: 0 0 20px 0;
}

@media (max-width: 991px) {
    .namespaces .namespace-container {
        margin-right: 0;
        width: 100%;
    }
}

/** Code and pre tags **/

tt, code, pre {
    font-family: "RoadizSans Mono", Consolas, "Liberation Mono", Menlo, Courier, monospace;
}

code {
    padding: 0;
    padding-top: 0.2em;
    padding-bottom: 0.2em;
    margin: 0;
    font-size: 85%;
    background-color: rgba(0,0,0,0.04);
    border-radius: 3px;
    color: #333;
}

pre {
    padding: 16px;
    overflow: auto;
    font-size: 85%;
    line-height: 1.45;
    background-color: #f7f7f7;
    border-radius: 3px;
}

h2 {
    background-color: transparent;
    padding: 4px 4px 12px 8px;
    font-size: 18px;
    margin: 20px 0;
    border-bottom: 1px solid #e6e6e6;
}

/** Doc index **/

dt {
    font-weight: normal;
}

dd {
    margin-left: 30px;
    line-height: 1.5em;
}

#doc-index h2 {
    font-weight: bold;
    margin: 30px 0;
}

#doc-index .pagination {
    margin: 0;
}

/* Search page */

.search-results {
    list-style-type: none;
    padding: 0;
    margin: 0;
}

.search-results li {
    list-style-type: none;
    margin: 0;
    padding: 14px 0;
    border-bottom: 1px solid #ccc;
}

.search-results h2 {
    background: none;
    margin: 0;
    padding: 0;
    font-size: 18px;
}

.search-results h2 a {
    float: left;
    display: block;
    margin: 0 0 4px 0;
}

.search-results .search-type {
    float: right;
    margin: 0 0 4px 0;
}

.search-results .search-from {
    margin: 0 0 12px 0;
    font-size: 12px;
    color: #999;
}

.search-results .search-from a {
    font-style: italic;
}

.search-results .search-description {
    margin: 8px 0 0 30px;
}

